# raplre

./: Cargo.toml  README.md  intel.h
bench/: loop.rs  loop.sh
benchmark/core_loop/: Cargo.toml
benchmark/core_loop/src/: main.rs
benchmark/dram/: Cargo.toml
benchmark/dram/src/: block.rs  error.rs  main.rs  stat.rs
benchmark/dram/src/benchmark/: block_copy.rs  mod.rs  simple.rs
benchmark/dram/src/worker/: mod.rs  simple.rs
microbench/: Cargo.toml
microbench/bench/: datacopy.rs
raplre/: Cargo.toml
raplre/src/: common.rs  cpuid.rs  error.rs  logger.rs  main.rs  models.rs  task.rs  tool.rs
scripts/: dram.sh  loop.sh
src/: common.rs  cpuid.rs  error.rs  main.rs  models.rs  task.rs  tool.rs
