[package]
name = "raplre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
once_cell = "1.19.0"
errore = {git = "https://e.coding.net/g-pxye7583/runeasy/errore.git"}
ctor = "0.2.8"
log = "0.4.22"
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
prettytable-rs = "0.10.0"
serde = { version = "1.0.204",features = ["derive"] }
serde_json = "1.0.120"
csv = "1.1"
ncurses = "5.101.0"

[build-dependencies]
bindgen = "0.59" 
cc = "1"


[[bin]]
name = "raplre-bm-loop"
path = "bench/loop.rs"
