[workspace]
members = [
    "raplre",
    "benchmark/core_loop", 
    "benchmark/dram", "microbench"]
default-members = ["raplre"]
# A different feature resolver algorithm can be used by specifying the resolver version in Cargo.toml
# 
# The version "1" resolver is the original resolver that shipped with Cargo up to version 1.50.
# The default is "2" if the root package specifies edition = "2021" or a newer edition. 
# Otherwise the default is "1".
resolver = "2"

