[package]
name = "raplre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2.155"
once_cell = "^1.19.0"
errore = { git = "https://e.coding.net/g-pxye7583/runeasy/errore.git" }
ctor = "^0.2.8"
clap = { version = "^4.5.9", features = ["derive"] }
serde = { version = "^1.0.204",features = ["derive"] }
serde_json = "^1.0.120"
csv = "^1.1"
ncurses = "5.101.0"
cpu = {git = "https://e.coding.net/g-pxye7583/runeasy/topology.git",package = "cpu"}


