[package]
name = "raplre-bm-dram"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }
ctor = "^0.2.8"
errore = { git = "https://e.coding.net/g-pxye7583/runeasy/errore.git" }
libc = "^0.2.155"
cpu = {git = "https://e.coding.net/g-pxye7583/runeasy/topology.git",package = "cpu"}
numa-sys = {git = "https://e.coding.net/g-pxye7583/runeasy/numa-sys.git"}
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
ctrlc = "3.4.4"
cxtend = { git = "https://e.coding.net/g-pxye7583/runeasy/cxtend.git" }
rtsc-time = {git = "https://e.coding.net/g-pxye7583/runeasy/rtsc-time.git"}
once_cell = "1.19.0"
arrayvec = "0.7.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"



